add feature/mar-324, add addToFavoriteNotice endpoint, upd swagger
